--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-navigation-redux-helpers": "^2.0.5",
     "react-redux": "5.0.6",
     "redux": "4.0.x",
+    "redux-form": "^7.4.2",
     "redux-logger": "3.0.6",
     "redux-persist": "5.7.2",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
